<resources>
    <string name="app_name">CadastroAlunos</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="Alunos">Alunos</string>
    <string name="Professores">Professores</string>
    <string name="Disciplinas">Disciplinas</string>
    <string name="Turmas">Turmas</string>
    <string name="Frequências">Lançamento de Frequências</string>
    <string name="Notas">Lançamento de Notas</string>
    <string name="Resultado">Resultados</string>
    <string name="MainTitle">Unipar - Pós Web e Mobile - Android</string>
    <string name="AlunoTitle">Módulo Aluno - Lista</string>
    <string name="CadAlunoTitle">Módulo Aluno - Cadastrar</string>
    <string name="ProfTitle">Módulo Professor</string>
    <string name="DisciplinaTitle">Módulo Disciplina</string>
    <string name="CadDisciplinaTitle">Módulo Disciplina - Cadastrar</string>
    <string name="cargaHoraria">Carga Horária</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="professor">Professor</string>
    <string name="disciplina">Disciplina</string>
    <string name="CadProfTitle">Módulo Professor - Cadastrar</string>
    <string name="CadTurmaTitle">Módulo Turma - Cadastrar</string>
    <string name="TurmaTitle">Módulo Turma</string>
    <string name="selecioneTurma">Selecione uma Turma</string>
    <string name="Turma">Turma</string>
    <string name="AlunoTurma">Aluno Turma</string>
    <string name="DisciplinaTurma">Disciplina Turma</string>
    <string name="DisciplinaTurmaTitle"><![CDATA[Módulo Disciplina -> Turma]]></string>
    <string name="AlunoTurmaTitle"><![CDATA[Módulo Aluno -> Turma]]></string>
    <string name="NotaAlunoTitle"><![CDATA[Cadastro Nota -> Aluno]]></string>
    <string name="selecioneDisciplina">Selecione uma Disciplina</string>
    <string name="nota">Nota</string>
    <string name="Semestral">Semestral</string>
    <string name="Anual">Anual</string>
    <string name="LancarNota">Lançar Nota</string>
    <string name="RegimeTurma">Regime da Turma</string>
    <string name="PresencaAluno">Presenças de Alunos</string>
    <string name="Data">Data</string>
    <string name="ResultadoTitle">Resultado Final</string>
</resources>