<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnPresencas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PresencaAlunoActivity">

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spTurma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/Turma"
        app:ms_hint="@string/selecioneTurma"

        app:ms_multiline="false" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spDisciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:ms_arrowColor="?attr/colorPrimary"
        app:ms_floatingLabelText="@string/disciplina"
        app:ms_hint="@string/selecioneDisciplina"
        app:ms_multiline="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/Data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDataPresenca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="selecionarData" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lnAlunos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
</LinearLayout>